# EmoCheck

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.md  README.md  README_ja.md  README_jp.md  build32.bat  build64.bat  emocheck.sln
.github/workflows/: ci.yaml
emocheck/: emocheck.cpp  emocheck.h  emocheck.hpp  emocheck.vcxproj  emocheck.vcxproj.filters  main.cpp
emocheck/modules/: scan.hpp  scan_v1.cpp  scan_v1.hpp  scan_v2.cpp  scan_v2.hpp  scan_v3.cpp  scan_v4.cpp  scan_v5.cpp
emocheck/utils/: file.cpp  file.hpp  native.cpp  native.hpp  process.cpp  process.hpp  registry.cpp  registry.hpp  service.cpp  service.hpp  utils.cpp  utils.hpp
